// ライセンスはいつか書いておく

syntax = "proto3";

package gantrycd.k8s_controller.v1;

option go_package = "github.com/gantrycd/backend/api/proto/pb/k8s-controller/v1";

import "proto/k8s_structure.proto";


message CreateNamespaceReply {
  string name = 1;
}

message ListNamespacesReply {
  repeated string names = 1;
}

message CreateDeploymentReply {
  string namespace = 1;
  string name = 2;
  string version = 3;
}

message repository {
  string name = 1;
  string pull_request_id = 2;
  string branch = 3;
};

message application {
  string app_name = 1;
  string deployment_name = 2;
  string status = 3;
  string version = 4;
  string image = 5;
  string age = 6;
};

message GetOrgReposReply {
  string organization = 1;
  repeated repository repositories = 2;
  repeated application applications = 3;
}

message GetAllsReply {
  repeated GetOrgReposReply organization_infos = 1;
};

message Usage {
  repeated Pod pods = 1;
};

message GetUsageReply {
  Usage usages = 1;
  bool is_disable = 2;
};

message GetRepoBranchesReply{
  repeated Branches branches = 1;
}

message Branches{
  string deployment_name = 1;
  string branch = 2;
  string pull_request_id = 3;
  string status = 4;
  string version = 5;
  string age = 6; 
  string replicas = 7;
  HPA hpa = 8;
  string cpu_min = 9;
  string cpu_max = 10;
  string mem_min = 11;
  string mem_max = 12;
}

message CreatePreviewReply {
  string namespace = 1;
  string name = 2;
  string version = 3;
  repeated string external = 4;
}

message BuildImageReply {
  string image = 1;
}

message GetLogsReply {
  int32 id = 1;
  string message = 2;
}
